# DistroWatchScrapper

./: Makefile  README.md  gather.py  pyproject.toml  update.sh
datasets/: Distrowatch_popularity.csv  dataset-metadata.json
