[tool.poetry]
name = "distrowatchscrapper"
version = "0.1.0"
description = ""
authors = ["Ismail Lachheb <ismael.lachheb@protonmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.10"
pandas = "^1.2.2"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
